log
Fri Mar 27 01:39:25 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
1ca26ca
Fri Mar 27 01:45:03 AM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
2542d52
Fri Mar 27 01:57:27 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:57:12: error: dereferencing ‘void *’ pointer [-Werror]
   57 |     return *dato;
      |            ^~~~~
list.c:57:12: error: void value not ignored as it ought to be
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
0286d40
Fri Mar 27 01:57:50 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f36de17
Fri Mar 27 01:58:09 AM UTC 2026: 
 tests:  0|0
5ed36c6
Fri Mar 27 01:59:10 AM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
96659c0
Fri Mar 27 01:59:39 AM UTC 2026: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   55 |     void* dato= list->head->data;
      |           ^~~~
cc1: all warnings being treated as errors
20c8809
Fri Mar 27 01:59:58 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
8bb4c41
Fri Mar 27 02:01:43 AM UTC 2026: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:57:12: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   57 |     return current->data;
      |            ^~~~~~~
      |            popCurrent
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
5ad89d4
Fri Mar 27 02:02:47 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:17: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   55 |     void* dato= current->data;
      |                 ^~~~~~~
      |                 popCurrent
list.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
490d24c
Fri Mar 27 02:03:28 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0e4467e
Fri Mar 27 02:05:20 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
011d879
Fri Mar 27 02:19:43 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7851403
Fri Mar 27 02:24:28 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:8: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   55 |     if(lista == NULL) return NULL;
      |        ^~~~~
      |        list
list.c:55:8: note: each undeclared identifier is reported only once for each function it appears in
d43c33c
Fri Mar 27 02:24:39 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cb02f8f
Fri Mar 27 02:26:03 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
96d6d90
Fri Mar 27 02:30:28 AM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
06d9d22
Fri Mar 27 02:31:31 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
73f43b1
Fri Mar 27 02:46:43 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/60
cdd9caa
Fri Mar 27 02:53:13 AM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
6f90fb0
Fri Mar 27 02:54:57 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff2db6f
Fri Mar 27 02:55:08 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3c1463
Fri Mar 27 02:56:45 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aa26bc0
Fri Mar 27 02:59:49 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
765b8e8
Fri Mar 27 03:00:50 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ae9343f
Fri Mar 27 03:02:15 AM UTC 2026: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
296ee45
Fri Mar 27 03:12:40 AM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:66:8: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   66 |     if(lista->current == NULL) return NULL;
      |        ^~~~~
      |        list
list.c:66:8: note: each undeclared identifier is reported only once for each function it appears in
276b9ef
Fri Mar 27 03:12:55 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
3928f4f
Fri Mar 27 03:18:37 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
ca808bb
Fri Mar 27 03:23:54 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
29e2da6
Fri Mar 27 03:24:38 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 20/60
8e9a655
Fri Mar 27 03:25:18 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
791e344
